--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -11,7 +11,7 @@
     "Secret": "9ad54114-5736-4128-beb7-5a9331d7e827"
   },
   "ConnectionStrings": {
-    "Connection": ""
+    "Connection": "Server=45.119.85.244; Database=DragonAcc; User ID=DragonAcc; Password=DragonAcc@123; TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
