--- a/server/server.Infastructure/server.Infrastructure.csproj
+++ b/server/server.Infastructure/server.Infrastructure.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\server.Domain\server.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
