--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ server/server.Tests.Unit/bin
 server/server.Tests.Unit/obj
 server\server.Infastructure\Migrations
 client/.vscode
+server/server.Infastructure/Migrations
