fix(auth): read UserId/UserName from correct JWT claims, feat(room): add join, leave, get members and search room APIs, docs(base): add usage comments for base controller and base service

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ server/server.Tests.Unit/obj
 server\server.Infastructure\Migrations
 client/.vscode
 server/server.Infastructure/Migrations
+server\server\appsettings.json
