--- a/server/server/appsettings.Development.json
+++ b/server/server/appsettings.Development.json
@@ -4,5 +4,20 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "JWT": {
+    "ValidIssuer": "ConvoxIssuer",
+    "ValidAudience": "ConvoxAudience",
+    "Secret": "9ad54114-5736-4128-beb7-5a9331d7e827"
+  },
+  "ConnectionStrings": {
+    "Connection": "Server=LAMLMAO; Database=Convox;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "ImgBB": {
+    "ApiKey": "e0772d6e840c7078b79ec9577e9d3081",
+    "ApiUrl": "https://api.imgbb.com/1/upload",
+    "MaxFileSizeInMB": 32,
+    "TimeoutInSeconds": 30
+  },
+  "AllowedHosts": "*"
 }
